--- a/landing.css
+++ b/landing.css
@@ -172,6 +172,8 @@ button {
 }
 .textgreen {
   color: #a3c962 !important;
+  font-size: 1.5rem;
+  margin-bottom: 30px;
 }
 .context {
   line-height: 1.1rem;
@@ -179,11 +181,11 @@ button {
 .context h2 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  font-size: 1.27rem;
+  font-size: 1.6rem;
   font-weight: 550;
 }
 .context p {
-  font-size: 15px;
+  font-size: 16px;
   color: #676662;
   letter-spacing: 1px;
   padding: 10px 0px;
@@ -192,7 +194,6 @@ button {
 }
 .context2 {
   display: block;
-
   width: 100%;
 }
 .fern {
@@ -213,6 +214,7 @@ button {
 .lightertext {
   font-weight: 100;
   font-size: 25px;
+  text-align: justify;
 }
 .ferncontext p {
   font-size: 1rem;
@@ -221,6 +223,7 @@ button {
   padding: 10px 0px;
   line-height: 28px;
   margin-bottom: 20px;
+  text-align: justify;
 }
 
 .progressbars {
@@ -254,27 +257,36 @@ button {
   padding-bottom: 4%;
 }
 .forest--text {
-  display: block;
-
-  text-align: center;
-  padding: 10px;
+  width: 100%;
 }
 .forest--text {
   color: #fff;
 }
 
+.forest__context {
+  width: 73%;
+  height: auto;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+
+.forest__heading {
+  
+}
+
 .forest__heading > h3 {
   color: #a3c962;
+  font-size: 30px;
 }
 
 .forest__heading > h1 {
   color: #fff;
   font-weight: lighter;
+  font-size: 50px;
+  
 }
-.forest__paragraph > p {
-  line-height: 30px;
-  font-weight: lighter;
-}
+
 
 .box {
   display: block;
