--- a/nav.css
+++ b/nav.css
@@ -7,7 +7,10 @@
     text-decoration: none;
     color: #343434;  
     font-size: 30px;  
-    z-index: 100;
+    z-index: 1000;
+    position: absolute;
+  top: 0;
+  position: fixed;
 }
 
 .sidenav{
@@ -80,4 +83,5 @@
   font-weight: 600;
   padding: 0 10px;
   letter-spacing: 1px;
+  
 }
